채널 디자인 변경

--- a/app/src/main/res/layout/item_channel_list_channel.xml
+++ b/app/src/main/res/layout/item_channel_list_channel.xml
@@ -10,7 +10,8 @@
   <LinearLayout
     android:orientation="horizontal"
     android:padding="0dp"
-    android:layout_marginTop="16dp"
+    android:layout_marginTop="7dp"
+    android:layout_marginBottom="7dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -66,10 +67,11 @@
         android:id="@+id/tv_item_channel_title_1"/>
 
       <LinearLayout
-        android:paddingBottom="20dp"
+        android:layout_marginTop="8dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" android:layout_weight="1">
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
 
         <ImageView
           android:layout_gravity="center_vertical"
@@ -122,8 +124,7 @@
     </LinearLayout>
 
     <LinearLayout
-      android:layout_weight="1"
-      android:layout_width="0dp"
+      android:layout_width="16dp"
       android:layout_height="match_parent"/>
 
     <LinearLayout
@@ -173,7 +174,7 @@
         android:id="@+id/tv_item_channel_title_2"/>
 
       <LinearLayout
-        android:paddingBottom="20dp"
+        android:layout_marginTop="8dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" android:layout_weight="1">
